<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <EditText
        android:id="@+id/etciudadcapital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_una_ciudad_capital"
        android:inputType="text|textAutoComplete"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/etpais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_un_pais"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/etpoblacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_poblacion"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Registrar"
        android:text="@string/agregar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="84dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="irConsultar"
        android:text="@string/consultar" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="irBorrar"
        android:text="@string/borrar_ciudad" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="irModificar"
        android:text="@string/modificar_poblacion" />

</LinearLayout>