<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModificarScreen">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/etciudadmod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_la_ciudad_ha_modificar"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/etpoblacionmod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_la_nueva_poblacion_de_la_ciudad"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="39dp" />

    <Button
        android:id="@+id/buttonModPoblacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Modificar"
        android:text="@string/modificar_poblacion" />
</LinearLayout>